--- a/VpTopLinkage/app/src/main/AndroidManifest.xml
+++ b/VpTopLinkage/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.example.vplinkage">
 
     <application
+        android:name=".BaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".BaseApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VpLinkage">
@@ -14,12 +14,16 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.VpLinkage.NoActionBar">
+
+        </activity>
+        <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.magicindicator.MaigcAcivity" />
     </application>
 
 </manifest>
